--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             /* CSS */
         </style>
 
-        <title>Title</title>
+        <title>Technology in Animation</title>
     </head>
     <body>
         <!-- HTML -->
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid animate__animated animate__backInDown font" style="color: lightblue;">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid animate__animated animate__backInDown font" >
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Technology In Animation</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,6 +46,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
           </nav>
 
+        <div>
           <div class="space" id="navhead">
           </div>
           <div class="head col-lg-10 offset-lg-1 text-center">
@@ -84,6 +85,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               </div>
             </div>
           </div>
+          <div>
 
           <div class="space" id="navparts"></div>
 
@@ -99,7 +101,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
               <p class="fonttext">Splash is used for water animation being to simulate water in a fictional world and it figures out how water moves in relation to real life. It was used in the movie Moana where the ocean was a character on its own and was helping in the water interacting with the characters.</p>
               <li>Tonic and Quicksilver</li>
               <p class="fonttext">These softwares were used to animate hair. Tonic was used to group hair pieces together to be able to place the hair in the way they wanted to. Frozen was a movie that used this as Anna and Elsa used Tonic to correctly shape their braids.</p>
-              <p>Video for Disney and hair animation: https://www.youtube.com/watch?v=cvTchBdrqdw&t=76s</p>
+              If you want to look more into hair animation, you can click <a href="https://www.youtube.com/watch?v=cvTchBdrqdw&t=76s">Here</a>
               <p>There are many tools that have been used in studios such as disney that have made animation easier to do but also add new and more dynamic effects such as hair.</p>
               </ol>
               <div class="celimg">
@@ -155,10 +157,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                   <div class="col-lg-4">
                     <div class="collapse multi-collapse" id="multiCollapseExample1">
                       <div class="card card-body boxes font">
+                        This would be just like A.I. art instead of giving you one drawing, it would give multiple frames. In order for this invention to work, you would need multiple drawings as a reference and you can type what you want the animation to do. Though, the negative of this invention would be that it wouldn't give much emotion.
                         <ul>
-                          <li>Just like AI art but instead of just one drawing, it might be multiple frames</li>
-                          <li>You may need one animation to show as a reference for the animation to work</li>
-                          <li>You can type what you want the animation to go and the AI animation will show a new animation using the characters and scene from your reference animation</li>
                         </ul>
                       </div>
                     </div>
@@ -168,10 +168,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                     <div class="collapse multi-collapse" id="multiCollapseExample2">
                       <div class="card card-body boxes font">
                         <ul>
-                          <li>that allows for more details and texture to those of real life</li>
-                          <li>Software that makes animation so actors don’t need to act out entire thing</li>
-                          <li>You would only need animators to do the animation</li>
-                          <li>Super realistic</li>
+                          Many quality of life changes can be added to make animators life easier, such as:
+                          <li>Softwares that allows for more details and texture closer to real life</li>
+                          <li>Automatic Frames that create movement</li>
+                          <li>More advanced animated CGI</li>
                           </ul>
                       </div>
                     </div>
@@ -180,10 +180,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
                     <div class="col-lg-4">
                       <div class="collapse multi-collapse" id="multiCollapseExample3">
                         <div class="card card-body boxes font">
-                          <ul>
-                            <li>Sometimes animate what the voice actors are saying for the animated character</li>
-                            <li>Instead, the software will allow you to skip the step and voice sync it for you</li>
-                          </ul>
+                          Voice syncing is a huge part of many cartoon animations that require the voice actor or animator to match in order for the words the characters are saying to make sense. An automatic software that moves the mouth depending on the words or tone said will remove an annoying part of animation. Additional editing can be used if it doesn't show enough emotion.
                         </div>
                       </div>
                 </div>
